# Interpreting-LoRA-Fine-Tuning

./: .gitignore  README.md  pyproject.toml  requirements.txt  results_extension.csv
.github/workflows/: ci.yml
notebooks/: extension_dora_second_model.ipynb  study.ipynb
paper/: report.tex
scripts/: quick_demo.py  run_study.py
src/lora_interp/: __init__.py  analysis.py  plots.py  train.py  utils.py
tests/: test_analysis.py
